# osu-beatmap-atlas

./: .gitignore  Justfile  README.md
frontend/: .eslintrc.cjs  Justfile  eslint.config.mjs  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: api.ts  app.html  corpus.ts  d3.ts  modParser.ts  sentry.ts  util.ts
frontend/src/components/: BeatmapSearch.svelte  ColorLegend.ts  ColorModeSelector.svelte  ConfigureColors.svelte  Info.svelte  Map.svelte  SelectedBeatmapInfo.svelte  TopControls.svelte  beatmapSearchWorker.worker.ts
frontend/src/components/LeftPane/: CollapsedLeftPane.svelte  LeftPane.svelte
frontend/src/components/LeftPane/Filters/: DoubleEndedSlider.svelte  Filter.svelte  Filters.svelte  ModFilterIcon.svelte  ModsFilter.svelte
frontend/src/components/SelectedBeatmapInfo/: SelectedBeatmapInfo.svelte  SimulatedPP.svelte  UserBestPlay.svelte
frontend/src/lib/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte  reset.css
frontend/src/viz/: AtlasViz.ts  AtlasVizRegl.ts  colormap.ts
frontend/src/viz/shaders/: circle.frag  circle.vert
frontend/static/: corpus
notebooks/: README.md  embed.ipynb  emblaze.ipynb  extract-data.ipynb
scripts/beatmap-downloader/: Cargo.toml  Justfile
scripts/beatmap-downloader/src/: build_corpus.rs  main.rs
scripts/collector/: .gitignore  index.js  package.json
scripts/updater/: index.js  package.json
