[package]
name = "beatmap-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
rosu-pp = "1.0.0"
csv = "1.0"
sqlx = { version = "0.7.4", features = ["mysql", "macros", "runtime-tokio"], default-features = false }
lazy_static = "1.4.0"
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["full"] }
flate2 = "1.0.29"
reqwest = "0.12.4"
foundations = { version = "3.3.0", default-features = false, features = ["logging"] }
fxhash = "0.2.1"
dotenv = "0.15.0"
clap = { version = "4.5.4", features = ["derive"] }
rosu-v2 = "0.8.0"
